관리자 api 및 s3 연동

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,9 +19,12 @@ spring:
 
 app:
   s3:
-    bucket: your-bucket-name
+    bucket: senawiki-assets
     region: ap-northeast-2
     prefix: community
+  assets:
+    bucket: senawiki-assets
+    region: ap-northeast-2
   hero-type-seed:
     enabled: false
   ses:
