--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: senawiki
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE:dev}
   datasource:
   jpa:
     hibernate:
