--- a/.github/workflows/deploy-cloudrun.yml
+++ b/.github/workflows/deploy-cloudrun.yml
@@ -11,6 +11,14 @@ jobs:
       contents: read
       id-token: write
 
+    env:
+      PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+      PROJECT_NUMBER: ${{ secrets.GCP_PROJECT_NUMBER }}
+      REGION: ${{ vars.GCP_REGION }}
+      GAR_REPO: ${{ secrets.GAR_REPO }}
+      SERVICE: ${{ secrets.CLOUD_RUN_SERVICE }}
+      IMAGE_NAME: senawiki-backend
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -24,24 +32,24 @@ jobs:
       - name: Setup gcloud
         uses: google-github-actions/setup-gcloud@v2
 
-      - name: Debug env
-        run: echo "REGION=${{ secrets.GCP_REGION }}"
+      - name: Debug region
+        run: echo "REGION=${REGION}"
 
       - name: Configure docker auth for Artifact Registry
-        run: gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev --quiet
+        run: gcloud auth configure-docker ${REGION}-docker.pkg.dev --quiet
 
       - name: Build image
         run: |
-          docker build -t ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GAR_REPO }}/senawiki-backend:${{ github.sha }} .
+          docker build -t ${REGION}-docker.pkg.dev/${PROJECT_ID}/${GAR_REPO}/${IMAGE_NAME}:${{ github.sha }} .
 
       - name: Push image
         run: |
-          docker push ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GAR_REPO }}/senawiki-backend:${{ github.sha }}
+          docker push ${REGION}-docker.pkg.dev/${PROJECT_ID}/${GAR_REPO}/${IMAGE_NAME}:${{ github.sha }}
 
       - name: Deploy to Cloud Run
         run: |
-          gcloud run deploy ${{ secrets.CLOUD_RUN_SERVICE }} \
-            --image ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GAR_REPO }}/senawiki-backend:${{ github.sha }} \
-            --region ${{ secrets.GCP_REGION }} \
+          gcloud run deploy ${SERVICE} \
+            --image ${REGION}-docker.pkg.dev/${PROJECT_ID}/${GAR_REPO}/${IMAGE_NAME}:${{ github.sha }} \
+            --region ${REGION} \
             --platform managed \
             --allow-unauthenticated
