--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,6 +32,8 @@ app:
     access-token-validity-seconds: 900
     refresh-token-validity-seconds: 604800
 server:
+  address: 0.0.0.0
+  port: 8080
   error:
     include-message: always
     include-binding-errors: always
